--- a/Day03_htmlCSS3/assets/css/style.css
+++ b/Day03_htmlCSS3/assets/css/style.css
@@ -1,11 +1,58 @@
+/* Nunito Google Font*/
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+
+
 * {
     text-align: center;
     /* Ortaladim */
+    margin: 0; /* Bastan tum marginleri 0'la*/
+    box-sizing: border-box; 
+    /*box-sizing CSS"de kullanilan kutu modelini secmek icin kullanilir.
+    Genelde border-box modeli tercih edilir.*/
+
+}
+
+body {
+    background-image: linear-gradient(yellowgreen, aqua);
+    font-family: 'Nunito', sans-serif;
 }
 
 .input{
     margin-bottom: 30px;
     width: 200px;
-    height: 25px;
-    
+    height: 30px;
 }
+
+label {
+    display: block; /* inline olan bir eleman blok hale getirilebilir.*/
+    /* nesneleri blok hali getiriyor, inline blok ise hem inline hem blok calisiyor*/
+    margin-right: 10px;
+
+}
+
+.btn {
+    font-size: 16px;
+    width: 100px;  
+    height: 30px;
+    margin-top: 10px; /* ustten 10 px bosluk verdim*/
+    border: 5px solid green; /* button'un kutusunun cevresi*/
+    border-radius: 50px;
+    /* radius ile dikdortgen seklinin koselerini yuvarlatiyor.*/
+    background-color: hotpink;
+    color: yellow; /* yazinin rengi*/
+    cursor: pointer; /* mouse ile btn class'inin old. yere gidince mouse el isaretine donuyor*/
+
+}
+.btn:hover{
+    /* mouse btn class'inin oldugu yerin uzerine geldiginde ne olacagini ayarliyoruz*/
+    background-color: red;
+}
+
+/* Fonts eklemek icin ;
+https://fonts.google.com/ 
+Genellikle Sans veya Serif yazi formatlari tercoh ediliyor.
+Daha anlasilir gozukuyor.*/
+/* Link olarak eklersek HTML'e ekleriz. En ustte.
+Import olarak eklersek CSS'e ekleriz. 
+CSS rules to specify families altindaki font fmaily'i ise body'e yapistirabiliriz.  */
+
